<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.resetpassword.CheckMailResetPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>

    <ImageView
        android:id="@+id/checkmailPasswordFragment_Logo_foodBeneficiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:src="@drawable/ic_message_icon" />

    <TextView
        android:id="@+id/checkmailPasswordFragment_Mail_foodBeneficiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkmailPasswordFragment_Logo_foodBeneficiary"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/check_mail"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/checkmailPasswordFragment_Message_foodBeneficiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkmailPasswordFragment_Mail_foodBeneficiary"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="168dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/manrope_regular"
        android:gravity="center"
        android:text="@string/we_have_sent_a_password_recover_n_instruction_to_your_account"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="14sp" />

    <Button
        android:id="@+id/checkmailPasswordFragment_button_foodBeneficiary"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@+id/checkmailPasswordFragment_Message_foodBeneficiary"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/loginbutton"
        android:fontFamily="@font/manrope_regular"
        android:padding="1dp"
        android:text="@string/open_email_app"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textFontWeight="700"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/checkmailPasswordFragment_EmailTv_foodBeneficiary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkmailPasswordFragment_button_foodBeneficiary"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="156dp"
        android:fontFamily="@font/manrope_regular"
        android:gravity="center"
        android:text="@string/did_not_receive_the_email_check_your"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:textSize="14sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkmailPasswordFragment_EmailTv_foodBeneficiary"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="1dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/checkmailPasswordFragment_SpamFilter_foodBeneficiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:layout_marginStart="30dp"
            android:layout_marginTop="11dp"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/spam_filter_or"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/checkmailPasswordFragment_Instruction_foodBeneficiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/resend_instruction"
            android:textColor="@color/loginbutton"
            android:textFontWeight="700"
            android:textSize="14sp" />


    </LinearLayout>

</RelativeLayout>