<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:background="@color/Relative_background"
    tools:context=".admin.uploadmeals.ui.MessageAlertFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ModalBottomSheet"
        android:background="@drawable/roundcorner_radius"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/messageAlertFragment_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:foregroundGravity="center"
            android:src="@drawable/ic_rectangle"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/messageAlertFragment_Image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:src="@drawable/ic_vector"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/messageAlertFragment_upload_success_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/manrope_regular"
            android:gravity="center"
            android:text="@string/upload_successful"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="24sp"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/messageAlertFragment_meal_added_successful_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/manrope_regular"
            android:gravity="center"
            android:text="@string/your_meal_has_been_added_successfully"
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textSize="14sp"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/messageAlertFragment_done_Button"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/loginbutton"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/done"
            android:textColor="@color/white"
            android:layout_marginBottom="70dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textFontWeight="600"
            android:textSize="14sp"
            tools:ignore="UnusedAttribute" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>